# NoriClient

./: AUDIT.md  CMakeLists.txt  Info.plist  PLAN.md  README.md  UIQueue.md
.github/actions/: action.yml
.github/workflows/: build-macos.yml
data/: .env
docs/: API.md  URI.md  connection.md  security.md
docs/flows/: Registration.md
scripts/: render_icon.sh
src/: main.cpp
src/biometric/: BiometricAuth.h  BiometricAuth.mm  BiometricAuth_stub.cpp
src/biometric/auth-id/: IDFallback.cpp  IDFallback.h
src/defines/: defines.h
src/defines/env/: env.cpp  env.h
src/defines/runtime/: runtimeGlobal.cpp  runtimeGlobal.h
src/logs/: logger.cpp  logger.h
src/network/request/: miniRequestX.cpp  miniRequestX.h
src/network/uri/: README.md  uriHandler.cpp  uriHandler.h
src/network/uri/routes/: api.cpp  auth.cpp  request.cpp  routes.h  slk.cpp
src/network/uri/util/: README.md  micsURI.cpp  utilURI.h  validate.cpp  validate.h
src/routine/: init.cpp  init.h
src/ui/: AppController.h  AppController.mm  Dialogs.mm  README.md
src/ui/Reponses/: Dialogs.h  Dialogs.mm  Dialogs_new.mm  README.md
